load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix [github.com/weikaishio/sim]
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "[github.com/weikaishio/sim]",
    visibility = ["//visibility:private"],
    deps = ["@com_github_mkideal_log//:go_default_library"],
)

go_binary(
    name = "sim",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
