load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "[github.com/weikaishio/sim]/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mkideal_log//:go_default_library",
        "@com_github_robfig_config//:go_default_library",
    ],
)
