load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["ip.go"],
    importpath = "[github.com/weikaishio/sim]/common/netutil/ipv4",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["ip_test.go"],
    embed = [":go_default_library"],
)
