load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["serialization.go"],
    importpath = "[github.com/weikaishio/sim]/common/osutil/gob_serialization",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["serialization_test.go"],
    embed = [":go_default_library"],
)
