load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "pid.go",
        "pid_darwin.go",
        "pid_unix.go",
        "pid_windows.go",
    ],
    importpath = "[github.com/weikaishio/sim]/common/osutil/pid",
    visibility = ["//visibility:public"],
)
